crates/bevy_ecs/compile_fail/tests/ui/filtered_entity_mut_get_relationship_target_by_id.stderr
error[E0502]: cannot borrow `filtered_entity` as mutable because it is also borrowed as immutable
  --> tests/ui/filtered_entity_mut_get_relationship_target_by_id.rs:18:31
   |
17 |     let _borrows_r1 = filtered_entity.get_relationship_targets_by_id(children_id);
   |                       --------------- immutable borrow occurs here
18 |     let _borrows_r1_mutably = filtered_entity.get_mut_by_id(children_id);
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
19 | }
   | - immutable borrow might be used here, when `_borrows_r1` is dropped and runs the destructor for type `Option<impl Iterator<Item = Entity>>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
